fix spacing between parts

--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,21 @@ html, body, #root {
 }
 
 body {
-    background-color: #4c8577;
+    background-color: #404356;
 }
 
 .machine {
-    margin: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
 .split {
+    padding: 10px;
     flex-basis: 50vh;
     flex-grow: 1;
     flex-shrink: 0;
+    max-width: 100%;
 }
 
 .controls {
@@ -36,6 +37,10 @@ body {
     border: 2px solid #022b3a;
     width: 3em;
     height: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .buttons a:hover {
@@ -50,11 +55,10 @@ body {
 .inputBox {
     border: 0;
     padding: 10px;
-    background-color: #404f56;
+    background-color: #7b80a0;
     color: #111111;
     font-family: monospace;
-    font-size: 18px;
-
+    font-size: 28px;
 }
 
 .bitmap {
